build: add Ubuntu 18.04 suite and tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,8 @@
 version: '3.7'
 services:
-  target:
+  kitchen:
     build: .
     command: test
-    entrypoint:
-      - bundle
-      - exec
-      - kitchen
     environment:
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
       AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION:-us-east-1}
