--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
             && rm packer_1.4.2_linux_amd64.zip
       - run: packer build packer/template.json
 
-  verify:
+  test:
     docker:
       - image: ruby:2.6.3
     steps:
@@ -23,4 +23,14 @@ jobs:
           paths:
             - /usr/local/bundle
       - run: bundle exec kitchen test --destroy=always
+
 version: 2
+
+workflows:
+  build-test:
+    jobs:
+      - build:
+          requires:
+            - test
+      - test
+  version: 2
