--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
           wget https://releases.hashicorp.com/packer/1.4.2/packer_1.4.2_linux_amd64.zip \
             && unzip -d /usr/local/bin packer_1.4.2_linux_amd64.zip \
             && rm packer_1.4.2_linux_amd64.zip
-      - run: packer build packer/template.json
+      - run: packer build template.json
 
   test:
     docker:
