--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3.7'
 services:
   kitchen:
-    build: .
+    build:
+      context: .
+      dockerfile: dockerfiles/kitchen/Dockerfile
     command: test
     environment: &environment
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
@@ -13,8 +15,8 @@ services:
   packer:
     build:
       context: .
-      dockerfile: packer/Dockerfile
-    command: build packer/template.json
+      dockerfile: dockerfiles/packer/Dockerfile
+    command: build template.json
     environment: *environment
     volumes: *volumes
     working_dir: /workspace
